TestRepo2/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Ability_to_Influence_Display_Division__c</fullName>
        <description>Ability to Influence Display Execution Division</description>
        <label>Ability to Influence Display Bev Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ability_to_Influence_Display_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ability to Influence Display Execution (Y/N)</description>
        <label>Ability to Influence Display Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ability_to_Influence_Shelf_Division__c</fullName>
        <description>Ability to Influence Shelf Execution</description>
        <label>Ability to Influence Shelf Bev Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ability_to_Influence_Shelf_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ability to Influence Shelf Execution (Y/N)</description>
        <label>Ability to Influence Shelf Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Composite_Key__c</fullName>
        <externalId>true</externalId>
        <label>Account Composite Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Name_Street_Address__c</fullName>
        <formula>Name &amp; &quot;  - &quot; &amp;  BillingStreet</formula>
        <label>Account Name &amp; Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Segmentatiobn__c</fullName>
        <label>Account Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>BillingStreet + IF(BillingCity != null,&apos;,&apos;, &apos; &apos;) + BillingCity + IF(BillingState != null,&apos;,&apos;, &apos; &apos;) + BillingState + IF(BillingCountry!= null,&apos;,&apos;, &apos; &apos;) + BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <label>Attributes</label>
        <picklist>
            <picklistValues>
                <fullName>iHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Back_Bar_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there a back bar visible to consumers at this on-premise account?</inlineHelpText>
        <label>Back Bar Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beer_Indicator__c</fullName>
        <label>Beer Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Beer_Rank__c</fullName>
        <label>Beer Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beer_Size__c</fullName>
        <label>Beer Size</label>
        <picklist>
            <picklistValues>
                <fullName>Beer Tail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer Top 100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Beer_Volume__c</fullName>
        <label>Beer Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Delivery_Days__c</fullName>
        <label>Broker Delivery Days</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Call_Time_s__c</fullName>
        <label>Call Time(s)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Called_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As a Sales Rep, I need the Called On field so I can flag the accounts that I visit</description>
        <inlineHelpText>Check this box if this is an Account that is visited by a Sales Rep</inlineHelpText>
        <label>Called On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Org_Desc__c</fullName>
        <label>Cluster Sales Org Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cumulative_By_Region__c</fullName>
        <label>Cumulative By Region</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Priority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DGUSA_Business__c</fullName>
        <label>DGUSA Business</label>
        <picklist>
            <picklistValues>
                <fullName>Top Rank Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Rank PAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top US 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Regional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DGUSA_Overall_Rank__c</fullName>
        <label>DGUSA Overall Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DGUSA_Region__c</fullName>
        <label>DGUSA Region</label>
        <picklist>
            <picklistValues>
                <fullName>New England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DGUSA_Team__c</fullName>
        <label>DGUSA Team</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DM_Territory__c</fullName>
        <label>DM Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dave_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dave Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_of_Operation__c</fullName>
        <label>Days of Operation</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diageo_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diageo Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Displays_Permitted_Wine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Displays Permitted - Wine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Displays_Permitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field asks, &quot;Does the account allow for displaying product on the retail floor or back bar?&quot;</inlineHelpText>
        <label>Displays Permitted - Spirits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_ID__c</fullName>
        <label>Distributor ID</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <label>Doing Business As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drink_Features_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this an On Premise Account that Promote Branded Drink Features or Specials?</inlineHelpText>
        <label>Drink Features Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Advertisements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Asks, &quot;Does the account advertise brands in publications or online?&quot;</inlineHelpText>
        <label>Existing Advertisements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_of_Operation__c</fullName>
        <label>Hours of Operation</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMC_Sales_Org_Desc__c</fullName>
        <label>IMC Sales Org Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Licensee_State_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Licensee State Code</label>
        <referenceTo>State_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stand Alone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery Shopping Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_High_Proof_Desc__c</fullName>
        <label>Low High Proof Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <controllingField>State_District__c</controllingField>
            <picklistValues>
                <fullName>Kansas Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland no MontCnty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montgomery County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upstate New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Carolina Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Carolina Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennsylvania Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vermont Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virginia Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Virginia Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oregon Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utah Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyoming Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas Statewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Group_Desc__c</fullName>
        <label>Marketing Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menu_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this an On Premise Account that Promotes Brands in Menus (e.g. Cocktail Menu, Wine Menu, After Dinner Menu)?</inlineHelpText>
        <label>Menu Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NABCA_Licensee_State_Abbreviation__c</fullName>
        <formula>Licensee_State_Code__r.State_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NABCA Licensee State Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NABCA_Licensee_State__c</fullName>
        <label>NABCA Licensee State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NABCA_Market__c</fullName>
        <label>NABCA Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NABCA_STATE_DESC__c</fullName>
        <label>NABCA State Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NABCA_Sector_Code__c</fullName>
        <label>NABCA Sector Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NABCA_TD_Linx_Code__c</fullName>
        <description>This field is used for NABCA data and prevents us from loading the TD Linx Code EXT Id which is used by other projects to update data</description>
        <label>TDLinx Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nabca_Account_Name__c</fullName>
        <label>NABCA Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nabca_Cluster__c</fullName>
        <label>NABCA Cluster</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nabca_Licensee_Address__c</fullName>
        <label>NABCA Licensee Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nabca_Licensee_City__c</fullName>
        <label>NABCA Licensee City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nabca_Licensee_Code__c</fullName>
        <label>NABCA Licensee Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nabca_Licensee_County__c</fullName>
        <label>NABCA Licensee County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nabca_Licensee_Zip__c</fullName>
        <label>NABCA Licensee Zip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nabca_Sector__c</fullName>
        <label>NABCA Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Accounts__c</fullName>
        <label>National Accounts</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Natl_Acct_Group_Desc__c</fullName>
        <label>National Acct Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Org_ID__c</fullName>
        <label>New Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Prod_ID__c</fullName>
        <label>New Prod ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Premise_Perfect_Mix_Segmentation__c</fullName>
        <label>On Premise Perfect Mix Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>Casual Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nightclub &amp; Lounge</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Order_Day_Time__c</fullName>
        <label>Order Day/Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Spirits_Menu_Competitors__c</fullName>
        <inlineHelpText>Enter the number of spirits cocktails on the menu</inlineHelpText>
        <label>Other Spirits Menu - Competitors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Spirits_Menu_Diageo__c</fullName>
        <inlineHelpText>Enter the number of spirits cocktails on the menu</inlineHelpText>
        <label>Other Spirits Menu - Diageo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Spirits_Menu__c</fullName>
        <formula>Other_Spirits_Menu_Diageo__c  / ( Other_Spirits_Menu_Diageo__c +  Other_Spirits_Menu_Competitors__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Spirits Menu %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overall_Size__c</fullName>
        <label>Overall Size</label>
        <picklist>
            <picklistValues>
                <fullName>Tail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAB_Rank__c</fullName>
        <label>PAB Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAB_Size__c</fullName>
        <label>PAB Size</label>
        <picklist>
            <picklistValues>
                <fullName>PAB Tail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAB Top 100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PAB_Volume__c</fullName>
        <label>PAB Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POS_Permitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Asks &quot;Can the account be merchandised with point of sale material?&quot;</inlineHelpText>
        <label>POS Permitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <formula>&quot;( &quot;&amp; NABCA_Licensee_State_Abbreviation__c &amp; &quot; - &quot; &amp; NABCA_Sector_Code__c &amp; &quot; - &quot; &amp;  Nabca_Licensee_Code__c &amp; &quot; )&quot;</formula>
        <label>Permit #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Delivery_Day_s__c</fullName>
        <label>Preferred Delivery Day(s)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_POS__c</fullName>
        <label>Preferred POS</label>
        <picklist>
            <picklistValues>
                <fullName>Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Stacker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Tucker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceiling Dangler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coasters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condiment Tray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contravision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corebuff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glassware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gutter Mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Rings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapel Pins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napkin Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Necker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Case Bin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennant String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Display Piece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pole Topper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premiums</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_Demographic__c</fullName>
        <label>Primary Demographic</label>
        <picklist>
            <picklistValues>
                <fullName>General Market</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AfAm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGBT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Private_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this on premise account host banquests or cater (allowing for a separate event manu or house drink lists)?</inlineHelpText>
        <label>Private Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <label>Program Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotions_Hosted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the account execute consumer sampling?</inlineHelpText>
        <label>Promotions Hosted</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>